Dark chalu but incomplete

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@
 
 body {
   /* background-image: linear-gradient(120deg, #fff1eb 0%, #ace0f9 100%); */
-  background-image: linear-gradient(120deg, #070606 0%, #101010 100%);
+  /* background-image: linear-gradient(120deg, #070606 0%, #101010 100%); */
   min-height: 100vh; 
 }
 
